--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,5 +6,10 @@ home-app {
     
     .balancePositive {
         color : lawngreen;
-    }   
+    }  
+
+
+      .themeFamille{ background-color: #f14d4d}
+  .themeVoiture{ background-color: #3373ec}  
+  .themeLoisir{ background-color: #36e665}  
 }
