--- a/src/pages/projection/projection.scss
+++ b/src/pages/projection/projection.scss
@@ -46,7 +46,10 @@
     -ms-filter: blur(1px);
     filter: blur(1px);
   }
-  
+
+  .themeFamille{ background-color: #f14d4d}
+  .themeVoiture{ background-color: #3373ec}  
+  .themeLoisir{ background-color: #36e665} 
  
 
 
